--- a/main.html
+++ b/main.html
@@ -25,6 +25,8 @@
 
         .card-img-container {
             overflow: hidden;
+            display: flex;
+            justify-content: center;
         }
 
         .fullDetail-card-img-container .product-img {
@@ -33,8 +35,8 @@
         }
 
         .product-img {
-            width: 100%;
-            height: 350px;
+            width: 70%;
+            height: 220px;
             transition: transform 0.3s ease;
         }
 
@@ -49,11 +51,25 @@
             text-align: left;
         }
 
+        .card-title {
+            font-size: 1.2rem !important;
+        }
+
+        .card-body button {
+            width: 120px !important;
+            font-size: 14px !important;
+        }
+
         .cart-card-body {
             display: flex;
             flex-direction: column;
             align-items: center;
         }
+
+        .purchase-list {
+            vertical-align: middle;
+        }
+
 
         .typewriter {
             display: inline-block;
@@ -110,8 +126,7 @@
     </nav>
 
     <!-- Home Section -->
-    <main id="main" class="container my-5">
-
+    <main id="main" class="container" style="margin-top: 100px;">
         <section id="home" class="row align-items-center">
             <div class="col-md-6">
                 <img src="https://img.freepik.com/free-photo/workplace-business-modern-male-accessories-laptop-black-background_155003-3944.jpg"
@@ -125,10 +140,19 @@
             </div>
         </section>
 
-
         <!-- Products Section -->
+
         <section id="products" class="container my-5">
             <h2 class="text-center text-warning mb-4">Our Products</h2>
+            <section id="search" class="my-4">
+                <div class="row d-flex justify-content-end">
+                    <div class="col-md-4 col-sm-10 d-flex">
+                        <label for="Search" class="my-2">Search:</label>
+                        <input type="search" id="prod_seach_txt" class="form-control mx-3 opacity-50 bg-dark text-light"
+                            onkeyup="seachProd(this)">
+                    </div>
+                </div>
+            </section>
             <div class="product-list row">
             </div>
         </section>
@@ -136,6 +160,9 @@
         <section id="cart" class="container my-5 d-none">
             <h2 class="text-center text-warning mb-4">Cart Products</h2>
             <div class="cart-product-list row">
+            </div>
+            <div class="purchase-btn-group d-flex justify-content-end d-none">
+                <button class="btn btn-info" onclick="showBuyForm()">Buy All</button>
             </div>
             <hr>
             <div class="final-sum my-2 d-flex justify-content-end">
@@ -171,7 +198,8 @@
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlTextarea1" class="form-label">Quantity</label>
-                        <input type="number" class="form-control opacity-50" id="prod_quan_txt" value="1" disabled required>
+                        <input type="number" class="form-control opacity-50" id="prod_quan_txt" value="1" disabled
+                            required>
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlTextarea1" class="form-label">Price</label>
@@ -186,6 +214,42 @@
                 </form>
             </div>
             <div class="add-product-list row mt-5">
+            </div>
+        </section>
+
+        <section id="purchase-frm" class="container my-5 d-none">
+
+            <h2 class="text-center text-warning mb-4">Purchase Form</h2>
+            <div class="row my-5 d-flex justify-content-center">
+                <div class="col-md-6">
+                    <table class="container table-dark table-responsive purchase-list">
+
+                    </table>
+                </div>
+                <div class="col-md-6">
+                    <form method="post">
+                        <div class="mb-3">
+                            <label class="form-label">Total Final Price:</label>
+                            <input type="text" class="form-control" id="final_purchase_price_txt" disabled required>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Your Name: </label>
+                            <input type="text" class="form-control" id="cust_name_txt" required>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Contact No: </label>
+                            <input type="text" class="form-control" id="cust_contact_txt" required>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Address: </label>
+                            <textarea class="form-control" rows="5" cols="5" id="cust_address_txt" required></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <button type="button" id="purchase_btn" onclick="purchaseProd()"
+                                class="btn btn-primary mb-3">Purchase</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </section>
 
@@ -250,6 +314,35 @@
 
             renderFullDetail(prod + "#fullscreen-button")
         }
+        function seachProd(textbox) {
+            const text = textbox.value
+            var productDisplay = document.querySelector(".product-list");
+            productDisplay.innerHTML = "";
+
+            for (p of products) {
+                var title=p.title.toString().toLowerCase()
+                if (title.includes(text.toLowerCase())) {
+                    productDisplay.innerHTML += `
+                    <div class="col-md-4 mb-4">
+                        <a id="${p.id}#fullscreen-button" onclick="renderFullDetail(this.id)">
+                            <div class="card bg-dark text-white product-card h-100">
+                                <div class="card-img-container">
+                                    <img src="${p.imgURL}"
+                                        class="card-img-top product-img" alt="${p.title} Image">
+                                </div>
+                                <div class="card-body d-flex flex-column">
+                                    <h5 class="card-title">${p.title}</h5>
+                                    <p class="card-text mb-4">Price: <s>${p.price}</s> ${(parseFloat(p.price) * 90) / 100}</p>
+                                    <button id="${p.id}#fullscreen-button" onclick="renderFullDetail(this.id)" class="btn btn-info mt-auto d-flex align-self-end">View Details</button>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                `
+                }
+
+            }
+        }
         function showHome() {
             document.getElementById('cart').classList.add('d-none')
             document.getElementById('home').classList.remove('d-none')
@@ -258,6 +351,7 @@
             document.getElementById('product-link4').classList.remove('d-none')
             document.getElementById('products').classList.remove('d-none')
             document.getElementById('addProd').classList.add('d-none')
+            document.getElementById('purchase-frm').classList.add('d-none')
 
             renderProducts()
         }
@@ -268,6 +362,7 @@
             document.getElementById('product-link4').classList.add('d-none')
             document.getElementById('products').classList.add('d-none')
             document.getElementById('addProd').classList.add('d-none')
+            document.getElementById('purchase-frm').classList.add('d-none')
             renderCart()
         }
         function addProd() {
@@ -298,6 +393,19 @@
             document.getElementById('prod_quan_txt').value = "";
             ProdManage()
 
+        }
+        function purchaseProd() {
+            let name = document.getElementById("cust_name_txt").value
+            let con = document.getElementById("cust_contact_txt").value
+            let address = document.getElementById("cust_address_txt").value
+
+            if (name.trim().length === 0 || con.trim().length === 0 || address.trim().length === 0) {
+                alert("Fill Details")
+            } else {
+                InCart = []
+                showHome()
+                alert("Thank You For The Order :)")
+            }
         }
         function showAddForm() {
             var prodManage = document.querySelector('.manage-btn-group')
@@ -448,6 +556,8 @@
             var total = document.getElementById("total-sum-text")
             var discount = document.getElementById("total-dis-text")
             var finalSum = document.getElementById("final-sum-text")
+            const buyClass = document.querySelector(".purchase-btn-group")
+            buyClass.classList.add('d-none')
 
             total.innerHTML = 0
             discount.innerHTML = 0
@@ -457,7 +567,7 @@
             let prod_total = 0
             let prod_discount = 0
 
-            if (InCart != null) {
+            if (InCart.length > 0) {
                 var productDisplay = document.querySelector('.cart-product-list')
                 productDisplay.innerHTML = "";
                 for (cart of InCart) {
@@ -471,7 +581,7 @@
                     productDisplay.innerHTML += `
                     <div class="col-md-4 mb-4">
                         <div class="card bg-dark text-white product-card h-100">
-                            <div class="card-img-container">
+                            <div class="card-img-container align-center">
                                 <img src="${p.imgURL}"
                                     class="card-img-top product-img" alt="${p.title} Image">
                             </div>
@@ -484,18 +594,61 @@
                     </div>
                 `
                 }
+                buyClass.classList.remove('d-none')
                 total.innerHTML = prod_total
                 discount.innerHTML = prod_discount
                 finalSum.innerHTML = final_total
             }
             if (InCart.length === 0) {
+
                 var productDisplay = document.querySelector('.cart-product-list')
                 productDisplay.innerHTML = "<p class='text-warning'>No Products In Cart</p>"
+            }
+        }
+        function showBuyForm() {
+
+            const purchaseDiv = document.querySelector("#purchase-frm")
+            purchaseDiv.classList.remove("d-none")
+
+            const cartDiv = document.querySelector("#cart")
+            cartDiv.classList.add('d-none')
+
+            const purchaseList = document.querySelector(".purchase-list")
+            purchaseList.innerHTML = `
+                        <tr align='center'>
+                            <th scope="col">Product Image</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Price</th>
+                        </tr>`
+
+            let final_total = 0
+            if (InCart.length > 0) {
+                for (c of InCart) {
+                    var cart_prod_index = products.findIndex(p => p.id == c)
+                    final_total = final_total + (parseFloat(products[cart_prod_index].price) * 90) / 100
+                    // console.log(products[cart_prod_index].title)
+
+                    purchaseList.innerHTML += `
+                    <tr>
+                        <td align='center'>
+                            <img src="${products[cart_prod_index].imgURL}" style='padding:5px;' width='85px' height='85px' alt="${products[cart_prod_index].title} Image">
+                        </td>
+                        <td align='center'>
+                            <p>${products[cart_prod_index].title}</p>
+                        </td>
+                        <td valign='middle' align='center'>
+                            <p>${(parseFloat(products[cart_prod_index].price) * 90) / 100}</p>
+                        </td>
+                    </tr>
+                    `
+                }
+                document.getElementById("final_purchase_price_txt").value = final_total
             }
         }
         function renderFullDetail(id) {
             document.getElementById("home").style = "display:none"
             document.getElementById('product-link2').classList.add('d-none')
+            document.getElementById('search').classList.add('d-none')
             var productDisplay = document.querySelector(".product-list");
             var prod_id = id.substr(0, Number(id.indexOf("#fullscreen-button")))
             var index = products.findIndex(p => p.id == prod_id);
@@ -530,8 +683,8 @@
                 `
         }
         function renderProducts() {
-
             document.getElementById("home").style.display = "flex"
+            document.getElementById('search').classList.remove('d-none')
             var productDisplay = document.querySelector(".product-list");
             productDisplay.innerHTML = "";
 
